<resources>
    <string name="app_name">Pente</string>

    <!--Main Activity-->
    <string name="title">Pente</string>
    <string name="start_new_tournament">Start New Tournament</string>
    <string name="load_tournament">Load Tournament</string>

    <!--Coin Toss Activity-->
    <string name="toss_coin">Toss Coin</string>
    <string name="toss_prompt">Heads or Tails?</string>
    <string name="result_prefix">Result: </string>
    <string name="result_won">You won the toss! You will be playing first as white.</string>
    <string name="result_lost">You lost the toss! You will be playing seconds as black.</string>
    <string name="heads_option">Heads</string>
    <string name="tails_option">Tails</string>
    <string name="continue_text">Continue</string>

    <!--Tournament Activity-->
    <string name="tournament">Tournament</string>
    <string name="play_round">Play Round</string>
    <string name="end_tournament">End Tournament</string>
    <string name="player_captures">Player Capture</string>
    <string name="main_menu">Main Menu</string>

    <!--Round Activity-->
    <string name="round">Round</string>
    <string name="player_name">Player</string>
    <string name="stone">Stone</string>
    <string name="captures">Captures</string>
    <string name="score">Score</string>
    <string name="round_score">Round Score</string>
    <string name="help">Help</string>
    <string name="save_game">Save Game</string>
    <string name="the_round_is_a_draw">The round is a draw!</string>
    <string name="play_best_move">Play Best Move</string>

    <!--Save Activity-->
    <string name="enter_file_name">Enter File Name</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>

    <!--Log Activity-->
    <string name="back">Back</string>
    <string name="log">Log</string>

</resources>